<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_online_event_app">Welcome to Online Event App</string>
    <string name="find_the_best_event_near_you_with_just_one_of_best_app">Find the Best event near you with just one of best app</string>
    <string name="btn_get_started">Get Started</string>
    <string name="tv_header_first_page">Welcome to Online Event App</string>
    <string name="tv_sub_header_first_page">Find the Best event near you with just one of best app</string>
    <string name="tv_header_second_page">Find And Book A Event</string>
    <string name="tv_sub_header_second_page">Find the Best event near you with just one of best app</string>
    <string name="tv_header_third_page">Organized A Premium Event</string>
    <string name="tv_sub_header_third_page">Find the Best event near you with just one of best app</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_register_by_no">Register by No</string>
    <string name="et_enter_email">Enter Email</string>
    <string name="et_enter_password">Enter Password</string>
    <string name="tv_remember_me">Remember me</string>
    <string name="btn_forget_password"><u>Forgot password ?</u></string>
    <string name="tv_don_t_have_an_account">Don’t have an account? Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="et_full_name">Full Name</string>
    <string name="et_phone_number">Phone Number</string>
    <string name="et_password">Password</string>
    <string name="email">Email</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="tv_privacy_policy">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="tv_already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in!</string>
    <string name="empty_email">Email Empty</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in !</string>
    <string name="email_not_match">Email Not Match!!</string>
    <string name="password_empty">Password Empty</string>
    <string name="password_not_match">Password Not Match!!</string>
    <string name="successful_message">Successful..</string>
    <string name="full_name_empty">Full Name is Empty</string>
    <string name="full_name_short">full name is short</string>
    <string name="enter_vaild_number">Enter valid number</string>
    <string name="password_and_conform_password_not_match">Password and conform password is not match</string>
    <string name="tv_enter_number">Simply enter your phone number to login or create an account.</string>
    <string name="tv_enter_number_privacy_policy"><b>By using our mobile app, you agree to our and </b>Privacy Policy Terms of Use</string>
    <string name="btn_continue">Continue</string>
    <string name="tv_authentication_code">An authentication code has been sent to</string>
    <string name="tv_phone_number">(+880) 111 222 333</string>
    <string name="otp_title">OTP Verification</string>
    <string name="tv_resend_code">I didn\'t receive code. Resend Code</string>
    <string name="btn_verify_now">Verify Now</string>
    <string name="tv_time">1:20 Sec left</string>
    <string name="number_empty">Number is empty</string>
    <string name="number_1">+81</string>
    <string name="number_2">+88</string>
    <string name="number_3">+84</string>
    <string name="number_4">+85</string>
    <string name="number_5">+91</string>
    <string name="et_mobile_number_empty">Mobile Number is Empty!!</string>
    <string name="et_empty_first">Enter Number in First edit text</string>
    <string name="et_empty_second">Enter Number in Second edit text</string>
    <string name="et_empty_third">Enter Number in Third edit text</string>
    <string name="et_empty_forth">Enter Number in Forth edit text</string>
    <string name="tv_food_event">Food Event</string>
    <string name="tv_category_events">Category Events</string>
    <string name="tv_view_all">View All +</string>
    <string name="tv_100_event">100+ Event</string>
    <string name="tv_organizerName">Space-X Tech</string>
    <string name="btn_follow">Follow</string>
    <string name="tv_popular_organizer">Popular Organizer</string>
    <string name="tv_upcoming_events">Upcoming Events</string>
    <string name="tv_upcoming_event_name">Asia Dance Competition</string>
    <string name="tv_upcoming_event_location">Town Hall Islington London</string>
    <string name="tv_upcoming_event_time">Sat, Dec 2022, at 12.00 PM</string>
    <string name="title_home">Home</string>
    <string name="tv_event_name">KPOP Award Indonesia</string>
    <string name="tv_event_address">Town Hall Islington London</string>
    <string name="tv_interested">Interested</string>
    <string name="tv_date">25</string>
    <string name="tv_month">Dec</string>
    <string name="spinner_item_going">Going</string>
    <string name="tv_popular_organizer_name_1">Space-X Tech</string>
    <string name="tv_popular_organizer_name_2">Skateboard Fest</string>
    <string name="tv_popular_organizer_name_3">Visual Projection</string>
    <string name="tv_music_event">Music Event</string>
    <string name="tv_movie_image">Movie Event</string>
    <string name="tv_person_name">Jhon Smith</string>
    <string name="tv_basic_member">Basic Member</string>
    <string name="title_setting">Settings</string>
    <string name="tv_sign_out">Sign Out</string>
    <string name="tv_news_letter">Newsletter</string>
    <string name="tv_text_message">Text Message</string>
    <string name="tv_phone_call">Phone Call</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_order_management">Order Management</string>
    <string name="tv_document_management">Document Management</string>
    <string name="tv_payment">Payment</string>
    <string name="tv_account">Accounts</string>
    <string name="tv_more_options">More Options</string>
    <string name="tv_usd">$USD</string>
    <string name="tv_currency">Currency</string>
    <string name="tv_language">Language</string>
    <string name="tv_english">English</string>
    <string name="tv_link_accounts">Linked Accounts</string>
    <string name="tv_facebook_google">Facebook, go…</string>
    <string name="unsuccessfull_message">Unsuccessful</string>
</resources>