<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blur_color"
    tools:context=".activity.SignUpActivity">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/signUpCardViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_23sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:src="@drawable/ic_camera_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFullName"
                        style="@style/customEditTextSignUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:hint="@string/et_full_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPhoneNumber"
                        style="@style/customEditTextSignUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:hint="@string/et_phone_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        app:layout_constraintEnd_toEndOf="@id/etFullName"
                        app:layout_constraintStart_toStartOf="@id/etFullName"
                        app:layout_constraintTop_toBottomOf="@+id/etFullName" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        style="@style/customEditTextSignUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:hint="@string/et_enter_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        app:layout_constraintEnd_toEndOf="@id/etPhoneNumber"
                        app:layout_constraintStart_toStartOf="@id/etPhoneNumber"
                        app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        style="@style/customEditTextSignUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:hint="@string/et_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="@id/etEmail"
                        app:layout_constraintStart_toStartOf="@id/etEmail"
                        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etConformPassword"
                        style="@style/customEditTextSignUp"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:hint="@string/et_confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="@id/etPassword"
                        app:layout_constraintStart_toStartOf="@id/etPassword"
                        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cbPrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:buttonTint="@color/splash_screen_background_color"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etConformPassword" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPrivacyPolicy"
                        style="@style/privacyPolicyTextViewStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_18ssp"
                        android:text="@string/tv_privacy_policy"
                        app:layout_constraintBaseline_toBaselineOf="@id/cbPrivacyPolicy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cbPrivacyPolicy" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignUp"
                        style="@style/baseButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:text="@string/btn_sign_up"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicy" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDoNotHaveAccount"
                        style="@style/dontHaveAnAccountStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:text="@string/already_have_an_account_sign_in"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>