<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blur_color"
    tools:context=".activity.SignInActivity">

    <include
        android:id="@+id/customToolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintTop_toBottomOf="@id/customToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                style="@style/signUpCardViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        style="@style/customEditTextSignIn"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_43sdp"
                        android:layout_marginHorizontal="@dimen/_18sdp"
                        android:layout_marginTop="@dimen/_28sdp"
                        android:drawableStart="@drawable/ic_icon_email"
                        android:hint="@string/et_enter_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        app:layout_constraintBottom_toTopOf="@+id/etPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        style="@style/customEditTextSignIn"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_43sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:drawableStart="@drawable/ic_icon_password"
                        android:hint="@string/et_enter_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        app:layout_constraintEnd_toEndOf="@+id/etEmail"
                        app:layout_constraintStart_toStartOf="@+id/etEmail"
                        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cbRememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginBottom="@dimen/_22sdp"
                        android:buttonTint="@color/splash_screen_background_color"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvRememberMe"
                        style="@style/rememberMeTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_remember_me"
                        app:layout_constraintBaseline_toBaselineOf="@id/cbRememberMe"
                        app:layout_constraintStart_toEndOf="@id/cbRememberMe" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:background="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/btn_forget_password"
                        android:textColor="@color/splash_screen_background_color"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/tvRememberMe"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                style="@style/baseButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/btn_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDoNotHaveAccount"
                style="@style/dontHaveAnAccountStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:text="@string/tv_don_t_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>