<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blur_color"
    tools:context=".activity.OnBoardingScreenActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/cardViewStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeader"
                style="@style/textViewLargeSizeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_41sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_9sdp"
                android:text="@string/welcome_to_online_event_app"
                app:layout_constraintBottom_toTopOf="@id/tvSubHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubHeader"
                style="@style/textViewSecondLargeSizeStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:text="@string/find_the_best_event_near_you_with_just_one_of_best_app"
                app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"
                app:layout_constraintEnd_toEndOf="@id/tvHeader"
                app:layout_constraintStart_toStartOf="@id/tvHeader" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetStarted"
                style="@style/baseButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:text="@string/btn_get_started"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>